--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
-.bundle
+.DS_Store
+config/database.yml
+config/deploy.rb
+Capfile
+log/*
+tmp/*
 db/*.sqlite3
-log/*.log
+db/schema.rb
+db/backup/*
+db/sphinx/*
+private/*
+*.tmp_*
+*.Thumbs.db*
+config/app_config.yml
+public/javascripts/base.js
+public/stylesheets/base.css
+Gemfile.lock
+*~
+*.swp
+.bundle
 tmp/**/*
